# drv_ntc

./: CMakeLists.txt  Kconfig.projbuild  drv_ntc.c  drv_ntc.h
